training.log
   Compiling core v2.2.0 (/root/projects/zumar/core)
warning: unused import: `std::process::Command`
 --> core/src/loader.rs:2:5
  |
2 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Tensor`
 --> core/src/loader.rs:3:42
  |
3 | use candle_core::{Device, Result, DType, Tensor};
  |                                          ^^^^^^

error[E0616]: field `vocab_size` of struct `ZmrConfig` is private
   --> core/src/main.rs:179:22
    |
179 | ...   (cfg.vocab_size, cfg.hidden_size, cfg.num_layer...
    |            ^^^^^^^^^^ private field

error[E0616]: field `hidden_size` of struct `ZmrConfig` is private
   --> core/src/main.rs:179:38
    |
179 | ...b_size, cfg.hidden_size, cfg.num_layers, cfg.num_e...
    |                ^^^^^^^^^^^ private field

error[E0616]: field `num_layers` of struct `ZmrConfig` is private
   --> core/src/main.rs:179:55
    |
179 | ...en_size, cfg.num_layers, cfg.num_experts)
    |                 ^^^^^^^^^^ private field

error[E0616]: field `num_experts` of struct `ZmrConfig` is private
   --> core/src/main.rs:179:71
    |
179 | ...layers, cfg.num_experts)
    |                ^^^^^^^^^^^ private field

warning: unused import: `Module`
 --> core/src/true_distill.rs:1:43
  |
1 | use candle_core::{Tensor, Result, Device, Module};
  |                                           ^^^^^^

For more information about this error, try `rustc --explain E0616`.
warning: `core` (bin "core") generated 3 warnings
error: could not compile `core` (bin "core") due to 4 previous errors; 3 warnings emitted
